--- a/Latex/KernelMethods.tex
+++ b/Latex/KernelMethods.tex
@@ -1,8 +1,6 @@
-\documentclass[main.tex]{subfiles}
-\newcommand\numberthis{\addtocounter{equation}{1}\tag{\theequation}}
 
-\newtheorem{theorem}{Theorem}[section]
-\newtheorem{definition}{Definition}[section]
+\documentclass[main.tex]{subfiles}
+
 
 \allowdisplaybreaks
 
@@ -27,39 +25,39 @@ A mapping to higher dimensions can be very expensive to compute, but kernels can
 \paragraph{Example - Linearize by dimensions augmentation} Consider this binary classification problem
 
 \begin{center}
-    \includegraphics[width=70mm]{img/Add_Dimension.PNG}
+    \includegraphics[width=70mm]{Add_Dimension.PNG}
 \end{center}
 
-Each example is represented by a single feature x. It clearly doesn't exist a linear separator between the two classes. But if we map $\{x\} \rightarrow \{x,x^2\}$ the data are linearly separable.
+Each example is represented by a single feature $\vect{x}$. It clearly doesn't exist a linear separator between the two classes. But if we map $\{x\} \rightarrow \{x,x^2\}$ the data are linearly separable.
 
 \begin{center}
-    \includegraphics[width=70mm]{img/Add_Dimension2.PNG}
+    \includegraphics[width=70mm]{Add_Dimension2.PNG}
 \end{center}
 This was the standard approach for extending linear models to non-linear problems
 
 \subsubsection{Kernel functions}
-Consider the following mapping $\Phi$ for an example $x=\{x_1, \dots, x_M\}$
+Consider the following mapping $\phi$ for an example $\vect{x}=\{x_1, \dots, x_M\}$
 \begin{equation*}
-    \Phi:x \rightarrow \{x_1^2,x_2^2,\dots,x_M^2,x_1x_2,x_2x_3, \dots,x_1x_M, \dots, x_{M-1}x_M\}
+    \phi:\vect{x} \rightarrow \{x_1^2,x_2^2,\dots,x_M^2,x_1x_2,x_2x_3, \dots,x_1x_M, \dots, x_{M-1}x_M\}
 \end{equation*}
 This particular mapping is called second order monomial. Each new feature uses a pair of the original features. We can observe that the mapping will increase quadratically the number of features. This will have an impact on complexity because computing the mapping itself can be inefficient. Moreover, using the mapped representation could be inefficient too.
 Thankfully, kernels help avoid both these issues because the mapping doesn't have to be explicitly computed and the computations with the mapped features remain efficient.
 A kernel is a function which takes as input two data samples, and performs the scalar product between the feature expansions(mapping) of the two samples.
 \begin{equation}
-    k(x,x') = \Phi(x)^T \Phi(x')
+    k(\vect{x},\vect{x}') = \phi(\vect{x})^T \phi(\vect{x}')
 \end{equation}
-This kernel function is the metric of our non-parametric method and it measure the similarity between the points $x$ and $x'$. A good consequence of being a scalar product is symmetry($k(x,x') = k(x',x)$)
-\paragraph{Example - Linear kernel} Let's consider the simplest kernel possible. The linear kernel correspond to the identity, in fact $\Phi(x) = x$. Given this k(x,x') will be simply the scalar product\footnotemark between the two original samples. The result of the scalar product is maximum when the two vector are pointing in the same direction. \footnotetext{$x \cdot x' = \|x\| \|x'\| \cos{\theta}$, where $\theta$ is the angle between $x$ and $x'$}
+This kernel function is the metric of our non-parametric method and it measure the similarity between the points $\vect{x}$ and $\vect{x}'$. A good consequence of being a scalar product is symmetry($k(\vect{x},\vect{x}') = k(\vect{x}',\vect{x})$)
+\paragraph{Example - Linear kernel} Let's consider the simplest kernel possible. The linear kernel correspond to the identity, in fact $\phi(\vect{x}) = \vect{x}$. Given this $k(\vect{x},\vect{x}')$ will be simply the scalar product\footnotemark between the two original samples. The result of the scalar product is maximum when the two vector are pointing in the same direction. \footnotetext{$\vect{x} \cdot \vect{x}' = \|\vect{x}\| \|\vect{x}'\| \cos{\theta}$, where $\theta$ is the angle between $\vect{x}$ and $\vect{x}'$}
 \newline
 There are different type of kernel
 \begin{itemize}
     \item \textbf{Stationary kernel}: Function of difference between arguments. It is called stationary kernel since invariant to translation in space
     \begin{equation*}
-        k(x,x') = k(x-x')
+        k(\vect{x},\vect{x}') = k(\vect{x}-\vect{x}')
     \end{equation*}
     \item \textbf{Homogeneous kernel}: Known as radial basis functions, it depends only on the magnitude of the distance between arguments
     \begin{equation*}
-        k(x,x') = k(\|x-x'\|)
+        k(\vect{x},\vect{x}') = k(\|\vect{x}-\vect{x}'\|)
     \end{equation*}
 \end{itemize}
 
@@ -67,24 +65,24 @@ There are different type of kernel
 Many linear models for regression and classification can be reformulated in terms of dual representation, in which the kernel function arises naturally. We want this in order to be able to apply the kernel trick. In practice we want to describe our model not using feature but with a kernel. For every linear model exist a dual representation involving kernels. Let's take as an example ridge regression.
 We recall that the loss function for ridge regression is
 \begin{equation*}
-    L_w = \frac{1}{2}\sum_{n=1}^N (w^T\Phi(x_n) - t_n)^2 + \frac{\lambda}{2}w^T w
+    L_w = \frac{1}{2}\sum_{n=1}^N (w^T\phi(x_n) - t_n)^2 + \frac{\lambda}{2}w^T w
 \end{equation*}
 and its gradient is
 \begin{align*}
-    \overset{w}{\nabla}L &= \frac{1}{2} 2 \sum_{n=1}^N (w^T\Phi(x_n) - t_n) \Phi(x_n)^T + \frac{\lambda}{2}2 w^T \\
-    &= \sum_{n=1}^N (w^T\Phi(x_n) - t_n) \Phi(x_n)^T + \lambda w^T
+    \overset{w}{\nabla}L &= \frac{1}{2} 2 \sum_{n=1}^N (w^T\phi(x_n) - t_n) \phi(x_n)^T + \frac{\lambda}{2}2 w^T \\
+    &= \sum_{n=1}^N (w^T\phi(x_n) - t_n) \phi(x_n)^T + \lambda w^T
 \end{align*}
 Putting $\overset{w}{\nabla}L = 0$ we have
 \begin{align*}
-    -\lambda w^T &= \sum_{n=1}^N (w^T\Phi(x_n) - t_n) \Phi(x_n)^T \\
-    w^T &= -\frac{1}{\lambda} \sum_{n=1}^N (w^T\Phi(x_n) - t_n) \Phi(x_n)^T \\
-    & \text{Define } a_n = -\frac{1}{\lambda} (w^T\Phi(x_n) - t_n) \quad [1x1]\\
-    &= \sum_{n=1}^N a_n \Phi(x_n)^T \\
-    w &= \bigg( \sum_{n=1}^N a_n \Phi(x_n)^T \bigg)^T \\
-    &= \sum_{n=1}^N (a_n \Phi(x_n)^T)^T \\
-    &= \sum_{n=1}^N (\Phi(x_n) a_n) \\
-    & \text{Define } \Phi = \begin{bmatrix}\begin{bmatrix}\Phi^T(x_1)\end{bmatrix}\\ \vdots \\ \begin{bmatrix} \Phi^T(x_N)\end{bmatrix}\end{bmatrix} \text{, and } a=\begin{bmatrix}a_1 \\ \vdots \\ a_N\end{bmatrix}\\
-    &= \Phi^T a \quad [Mx1]
+    -\lambda w^T &= \sum_{n=1}^N (w^T\phi(x_n) - t_n) \phi(x_n)^T \\
+    w^T &= -\frac{1}{\lambda} \sum_{n=1}^N (w^T\phi(x_n) - t_n) \phi(x_n)^T \\
+    & \text{Define } a_n = -\frac{1}{\lambda} (w^T\phi(x_n) - t_n) \quad [1 \times 1]\\
+    &= \sum_{n=1}^N a_n \phi(x_n)^T \\
+    w &= \bigg( \sum_{n=1}^N a_n \phi(x_n)^T \bigg)^T \\
+    &= \sum_{n=1}^N (a_n \phi(x_n)^T)^T \\
+    &= \sum_{n=1}^N (\phi(x_n) a_n) \\
+    & \text{Define } \Phi = \begin{bmatrix}\begin{bmatrix}\phi^T(x_1)\end{bmatrix}\\ \vdots \\ \begin{bmatrix} \phi^T(x_N)\end{bmatrix}\end{bmatrix} \text{, and } a=\begin{bmatrix}a_1 \\ \vdots \\ a_N\end{bmatrix}\\
+    &= \Phi^T a \quad [M \times 1]
 \end{align*}
 Now we can substitute w in the loss function. To make the computation simpler, we switch to full matrix notation
 \begin{align*}
@@ -96,9 +94,9 @@ Now we can substitute w in the loss function. To make the computation simpler, w
     &= \frac{1}{2}(a^T \Phi \Phi^T \Phi \Phi^T a) + \frac{1}{2}t^T t -\frac{1}{2} a^T \Phi \Phi^T t -\frac{1}{2} t^T \Phi \Phi^T a +\frac{\lambda}{2} a^T \Phi \Phi^T a \\
     &= \frac{1}{2}(a^T \Phi \Phi^T \Phi \Phi^T a) + \frac{1}{2}t^T t - a^T \Phi \Phi^T t +\frac{\lambda}{2} a^T \Phi \Phi^T a
 \end{align*}
-We can observe how $\Phi$ is present only when multiplied by its transpose. In this way we can use the kernels we have define before to substitute the features. In order to have a simpler notation, we can observe that the kernel function is a Gram matrix\footnotemark $K=\Phi\Phi^T$ [NxN], where each element is 
+We can observe how $\Phi$ is present only when multiplied by its transpose. In this way we can use the kernels we have define before to substitute the features. In order to have a simpler notation, we can observe that the kernel function is a Gram matrix\footnotemark $K=\Phi\Phi^T [N \times N]$, where each element is 
 \begin{equation*}
-    K_{nm} = \Phi(x_n)^T \Phi(x_m) = k(x_n,x_m)
+    K_{nm} = \phi(x_n)^T \phi(x_m) = k(x_n,x_m)
 \end{equation*}
 \begin{equation}
     K =
@@ -112,7 +110,7 @@ We can observe how $\Phi$ is present only when multiplied by its transpose. In t
 
 \paragraph{Notes} 
 \begin{itemize}
-    \item $\Phi$ [NxM] and $K$ [NxN]
+    \item $\Phi [N \times M]$ and $K [N \times N]$
     \item K is a matrix of similarities of pairs of samples(metric)
     \item K is symmetric
 \end{itemize}
@@ -120,17 +118,17 @@ Now we can substitute $\Phi^T \Phi$ with $K$. We write $L_w$ as $L_a$ because w 
 \begin{equation*}
     L_a = \frac{1}{2}(a^T K K a) + \frac{1}{2}t^T t - a^T K t +\frac{\lambda}{2} a^T K a
 \end{equation*}
-Solving for $a$ by combining $w=\Phi^T a$ and $a_n=-\frac{1}{\lambda}(w^T \Phi(x_n)-t_n)$
+Solving for $a$ by combining $w=\Phi^T a$ and $a_n=-\frac{1}{\lambda}(w^T \phi(x_n)-t_n)$
 \begin{equation}
-    a = (K + \lambda I_N)^{-1} t \quad [Nx1]
+    a = (K + \lambda I_N)^{-1} t \quad [N \times 1]
 \end{equation} \label{eqn_a}
-Solution for $a$ can be expressed as a linear combination of elements of $\Phi$, whose coefficients are entirely in terms of kernel $k(x,x')$, from
-which we can recover original formulation in terms of parameters $w$. This means that the loss function is convex thus it has only one global minimum. We can observe how all the element in equation (\ref{eqn_a}) have dimension dependent only on the number of samples. This is exactly what we were looking for, because we have said that the complexity of kernel methods depends on the number of samples and not features. It practically means that now we have to invert a [NxN] matrix instead of a [MxM].
+Solution for $a$ can be expressed as a linear combination of elements of $\Phi$, whose coefficients are entirely in terms of kernel $k(\vect{x},\vect{x}')$, from
+which we can recover original formulation in terms of parameters $w$. This means that the loss function is convex thus it has only one global minimum. We can observe how all the element in equation (\ref{eqn_a}) have dimension dependent only on the number of samples. This is exactly what we were looking for, because we have said that the complexity of kernel methods depends on the number of samples and not features. It practically means that now we have to invert a $[N \times N]$ matrix instead of a $[M \times M]$.
 
 When we make a prediction for a new x we have our linear regression model. If we substitute $w=\Phi^Ta$.
 \begin{align*}
-    y(x) &= w^T\Phi(x) \\
-    &= a^T\Phi \Phi(x) \\
+    y(x) &= w^T\phi(x) \\
+    &= a^T\Phi \phi(x) \\
     &\text{Define }k(x)=
     \begin{bmatrix}
     k(x,x_1) \\
@@ -143,7 +141,7 @@ As we can see, the prediction is a linear combination of the target values from 
 This approach have several advantages
 \begin{itemize}
     \item Solution for a is entirely described in terms of kernel functions. Once we get $a$ we can recover $w$ as a linear combination of $\Phi$ using $w = \Phi^T a$
-    \item When computing the solution we need to invert a [NxN] matrix and not a [MxM] matrix. This is good when the number of features is very high
+    \item When computing the solution we need to invert a $1 \times N$ matrix and not a $1 \times M$ matrix. This is good when the number of features is very high
     \item The true advantage is that for some kernel, we don't even need to compute $\Phi$. Doing so we resolve a lot of issues revolving around the high number of features. We will see how we can work even with infinite features.
     \item Kernel functions can be defined not only over simply vectors of real numbers, but also over objects as diverse as graphs, sets, string, and text documents
 \end{itemize}
@@ -255,14 +253,14 @@ This distribution describe the values of our function based on the inputs x. Not
 \newpage
 \begin{center}
 \begin{tabular}{cc}
-    \includegraphics[width=80mm]{img/GaussianProcesses.jpg} &
-    \includegraphics[width=80mm]{img/MultivariateGaussian.jpg} \\
+    \includegraphics[width=80mm]{GaussianProcesses.jpg} &
+    \includegraphics[width=80mm]{MultivariateGaussian.jpg} \\
 (a) Function we want to estimate & (b) Multivariate Gaussian over t
 \end{tabular}
 \end{center}
 If we draw a sample from the multivariate Gaussian we would define a new function. In fact, picking a sample is the same as picking an infinite sequence of points in the $(x,t)$ system. So our goal is to define a multivariate Gaussian which describe as well as possible the values of every point of our original function. The white dot in figure (b) is a sample of the multivariate Gaussian representing a guess on the original function.
 \begin{center}
-    \includegraphics[width=90mm]{img/SampleGaussianProcesses.jpg} \\
+    \includegraphics[width=90mm]{SampleGaussianProcesses.jpg} \\
     (c) Function estimated from the multivariate Gaussian. Correspond to the white dot in (b)
 \end{center}
 
@@ -318,9 +316,9 @@ We can calculate that
     \begin{bmatrix} 
     C^{(N)} & k \\
     k^T & c
-    \end{bmatrix}, \quad [(N+1) x (N+1)] \\
-    k &= \begin{bmatrix} k(x_1, x_{N+1}) & \dots & k(x_N, x_{N+1}) \end{bmatrix}^T, \quad [Nx1] \\
-    c &= k(x_{N+1},x_{N+1}), \quad [1x1]
+    \end{bmatrix}, \quad [(N+1) \times (N+1)] \\
+    k &= \begin{bmatrix} k(x_1, x_{N+1}) & \dots & k(x_N, x_{N+1}) \end{bmatrix}^T, \quad [N \times 1] \\
+    c &= k(x_{N+1},x_{N+1}), \quad [1 \times 1]
 \end{align*}
 We can observe that for the Gaussian distribution properties, the predictive distribution is still a Gaussian. From that, we can apply the properties over conditional Gaussian distribution to obtain $p(t_{N+1}|t^{(N)},x_1,\dots,x_{N+1})$.
 \begin{equation}
@@ -336,7 +334,7 @@ First, we construct our prior p(t) (red ellipses). We assume a zero mean distrib
 As we have said before, like we need to define features in the parametric world, we need to define a kernel in the non-parametric case. In some cases, the kernel have some hyperparameters. How can we find the optimal values for this hyperparameters?
 We have already seen how cross validation can be used to do model selection. This method is very robust, but at the same time it is slow. Another approach uses the maximization of the marginal likelihood using gradient optimization. In practice, you want to find the hyperparameters for which the observed target variables are more likely. This is faster, but it can be stuck in local minima. Usually the gradient approach is the go to method for hyperparameters optimization.
 \begin{center}
-    \includegraphics[height=60mm]{img/GaussianProcessExample.PNG}
+    \includegraphics[height=60mm]{GaussianProcessExample.PNG}
 \end{center}
 
 \newpage
