--- a/Latex/LinearRegression.tex
+++ b/Latex/LinearRegression.tex
@@ -1,5 +1,7 @@
+
 \documentclass[main.tex]{subfiles}
-\newcommand\numberthis{\addtocounter{equation}{1}\tag{\theequation}}
+
+
 
 \allowdisplaybreaks
 
@@ -49,7 +51,7 @@ So our inputs variables would be
 \paragraph{Note} In linear regression we can distinguish two spaces. Hypothesis space(Parameters space) and Output space(Input space)
 
 \begin{center}
-    \includegraphics[scale=0.4]{img/param_input_space.jpg}
+    \includegraphics[scale=0.4]{param_input_space.jpg}
 \end{center}
 
 \subsubsection{Linear regression with non-linear basis functions}
@@ -109,21 +111,21 @@ Given N samples and M parameters, we construct $\Phi=\begin{bmatrix}\Phi(x_1) & 
 We can rewrite the SSE in matrix notation
 \begin{equation}
     %L(w) = \frac{1}{2}RSS(w)=\frac{1}{2}\underset{1x1}{\underset{(Nx1)^T}{(\underset{Nx1}{t}-\underset{NxM*Mx1}{\Phi w})^T}\underset{Nx1}{(\underset{Nx1}{t}-\underset{NxM*Mx1}{\Phi w})}}
-    L(w) = \frac{1}{2}RSS(w)=\frac{1}{2}(t-\Phi w)^T(t-\Phi w) \quad [1x1]\footnotemark
+    L(w) = \frac{1}{2}RSS(w)=\frac{1}{2}(t-\Phi w)^T(t-\Phi w) \quad [1 \times 1]  \footnotemark
 \end{equation}
 
-\paragraph{Note} $\Phi[NxM]$, $w[Mx1]$, $t[Nx1]$
+\paragraph{Note} $\Phi \, [N \times M]$, $w \, [M \times 1]$, $t \, [N \times 1]$
 \footnotetext{The [ ] next to the equations indicates result dimensions}
 \newline
 To minimize L(w) we have to calculate the first and the second derivative
 \begin{equation}
-    \frac{\partial L(w)}{\partial w}=\frac{\partial(\frac{1}{2}(t-\Phi w)^T(t-\Phi w))}{\partial w} = -\Phi^T(t-\Phi w) \quad[Mx1]
+    \frac{\partial L(w)}{\partial w}=\frac{\partial(\frac{1}{2}(t-\Phi w)^T(t-\Phi w))}{\partial w} = -\Phi^T(t-\Phi w) \quad[M \times 1]  
 \end{equation}
 
 \paragraph{Note} $\frac{\partial L(w)}{\partial w}$ are the directions of every $w_i$ to minimize $L(w)$
 
 \begin{equation}
-    \frac{\partial L(w)}{\partial w \partial w^T}=\Phi^T\Phi \quad [MxM]
+    \frac{\partial L(w)}{\partial w \partial w^T}=\Phi^T\Phi \quad [M \times M]  
 \end{equation}
 
 \paragraph{Note} $\frac{\partial L(w)}{\partial w \partial w^T}$ is a semi-definite positive matrix\footnotemark, so all eigen values$\geq0$. It also means that for $\frac{\partial L(w)}{\partial w}=0$ we find the minimum of $L(w)$
@@ -137,7 +139,7 @@ Now we have to find $w$ imposing the first derivative to zero
     -\Phi^T(t-\Phi w)&=0\\
     -\Phi^Tt+\Phi^T\Phi w &=0\\
     \Phi^T\Phi w&=\Phi^Tt\\
-    \hat{w}&=(\Phi^T\Phi)^{-1}\Phi^Tt \quad [Mx1] \numberthis
+    \hat{w}&=(\Phi^T\Phi)^{-1}\Phi^Tt \quad [M \times 1] \numberthis 
 \end{align*}
 
 Second derivative can give us some infos about features(basis functions) importance. If we have some eigen values close to zero we could have the following situations
@@ -200,7 +202,7 @@ To find the maximum likelihood, we equal the gradient of $ln(p(t|X,w,\sigma^2))=
     &= \bigg( \bigg( \sum_{n=1}^N \Phi(x_n)\Phi^T(x_n) \bigg)^{-1} \bigg)^T \bigg( \sum_{n=1}^N t_n\Phi^T(x_n) \bigg)^T \\
     &= \bigg( \sum_{n=1}^N \Phi(x_n)\Phi^T(x_n) \bigg)^{-1} \sum_{n=1}^N \Phi(x_n)t_n 
     \quad \quad having \quad \Phi=\begin{bmatrix} \begin{bmatrix} \Phi^T(x_1) \end{bmatrix} \\ \vdots \\ \begin{bmatrix} \Phi^T(x_N) \end{bmatrix} \end{bmatrix} \\
-    &= (\Phi^T \Phi)^{-1} \Phi^T t \quad [Mx1]\numberthis{} \label{ML_result}
+    &= (\Phi^T \Phi)^{-1} \Phi^T t \quad [M \times 1]  \numberthis{} \label{ML_result}
 \end{align*}
 
 \newpage
@@ -220,7 +222,7 @@ We can achieve variance reduction by gathering more samples for our estimation.
 
 \paragraph{Multiple outputs} To solve a regression problem with multiple outputs we could use different sets of basis function for each output, having independents problems. Usually, a single set of basis function is used
 \begin{equation}
-    \hat{W}_{ML}=\underbrace{(\Phi^T\Phi)^{-1}\Phi^T}_{\Phi^{\dagger} \text{Pseudo-inverse}} T\quad [MxK],\quad where \quad T \quad [NxK]
+    \hat{W}_{ML}=\underbrace{(\Phi^T\Phi)^{-1}\Phi^T}_{\Phi^{\dagger} \text{Pseudo-inverse}} T\quad [M \times K]  ,\quad where \quad T \quad [N \times K]  
 \end{equation}
 
 \subsubsection{Gradient optimization (Open form)}
@@ -243,7 +245,7 @@ An optimal model is one that generalize well the problem and generalization is t
 \end{itemize}
 A naive way to measure the performance of our model is to look at the loss function value. A lower value corresponds to a better performance. This is true, but loss function value lacks of valuable information regarding model complexity. In fact, as we had said before, an overfitting model tries to interpolate the dataset, this will produce a loss function value that tends to zero but the model true performance is far from optimal.
 \begin{center}
-    \includegraphics[scale=0.5]{img/Under-Overfitting.png}
+    \includegraphics[scale=0.5]{Under-Overfitting.png}
 \end{center}
 To overcome this problem we can split the dataset in two subset,
 \begin{itemize}
@@ -257,7 +259,7 @@ A good error function for testing the complexity is
 Differently from the loss function used at training time $E_{RMS}$ is not monotonically decreasing with model complexity. It has a U shape and the minimum corresponds to the optimal model complexity.
 
 \begin{center}
-    \includegraphics[scale=0.25]{img/error_complexity.png}
+    \includegraphics[scale=0.25]{error_complexity.png}
 \end{center}
 
 Another indicator for poor generalization is parameters absolute value. If we have very large parameters it means that the model oscillate very rapidly. This is an evidence of overfitting.
@@ -276,7 +278,7 @@ The penalization of $L_W$ can be controlled with $\lambda$(regularization coeffi
 Furthermore we can interpret $L_W$ as a constraint. If we consider the parameters space, $L_w$ is bounding the parameters at a certain distance from the origin. The distance is imposed by $\lambda$ and $q$. In particular, $q$ modifies the shape of the boundary(constraint) in the parameters space.
 The most used value for $q$ are $1$ and $2$.
 \begin{center}
-    \includegraphics[scale=0.4]{img/Q_boundaries_regularization.PNG}
+    \includegraphics[scale=0.4]{Q_boundaries_regularization.PNG}
 \end{center}
 Regularization allows complex models to be trained on data sets of limited size
 without severe over-fitting, essentially by limiting the effective model complexity.
@@ -307,7 +309,7 @@ For $q=1$ we have the so called Lasso.
 Differently from ridge regression, lasso is not linear. No closed form solution exists because we have the absolute value operator in $L_W$. In contrast, a very good advantage is the capability to make some weights equal to zero for values of $\lambda$ large enough. This means that lasso leads to sparser models\footnotemark.
 \footnotetext{A model is sparse if some parameters tend to zero, eliminating some features from the model}
 \begin{center}
-    \includegraphics[scale=0.4]{img/Parameter_space_regularization.PNG}
+    \includegraphics[scale=0.4]{Parameter_space_regularization.PNG}
 \end{center}
 The red lines in the figure represents $\sum_{j=1}^M |w_j|^q$ respectively for $q=2$ and $q=1$.
 The blue lines are the unregularized error functions.
@@ -383,8 +385,8 @@ The Gaussian family is conjugate to itself (or self-conjugate) with respect to a
     P(w) \sim \mathcal{N} (w|w_0, S_0)
 \end{equation}
 \begin{itemize}
-    \item $w_0$ [MX1] Mean of the distribution. We guess that $w$ is equal to $w_0$ in the parameter space.
-    \item $S_0$ [MxM] Covariance matrix of the distribution. The matrix is diagonal because we assume i.i.d. parameters.
+    \item $w_0$ $ [M \times 1] $ Mean of the distribution. We guess that $w$ is equal to $w_0$ in the parameter space.
+    \item $S_0$ $ [M \times M] $ Covariance matrix of the distribution. The matrix is diagonal because we assume i.i.d. parameters.
 \end{itemize}
 So P(w) is a multivariate\footnotemark Gaussian.
 \footnotetext{In probability theory and statistics, the multivariate normal distribution or multivariate Gaussian distribution is a generalization of the one-dimensional (univariate) normal distribution to higher dimensions.}
@@ -434,7 +436,7 @@ As a model we take
 To find the posterior distribution we use an iterative approach as follow.
 We start from a multivariate Gaussian prior $P(w) \sim \mathcal{N}(0,\tau^2 I)$ (prior). Then we take one data point and we find the parameters that make the model pass through that point, also considering data noise $\sigma^2$ (likelihood). The next step is to multiply the prior with the likelihood to find a posterior distribution in parameters space. The new posterior can be used as a prior for the next iteration. We take a new point, we find the parameters that make the model pass through that point and again we multiply together prior and likelihood. Note that at each iteration, the likelihood distribution considers only one point at the time.
 \begin{center}
-    \includegraphics[scale=0.6]{img/Bayes_sequential.PNG}
+    \includegraphics[scale=0.6]{Bayes_sequential.PNG}
 \end{center}
 
 \newpage
@@ -455,7 +457,7 @@ In the figure below we can observe,
 \end{itemize}
 
 \begin{center}
-    \includegraphics[scale=0.6]{img/Posterior_predictive_distribution.PNG}
+    \includegraphics[scale=0.6]{Posterior_predictive_distribution.PNG}
 \end{center}
 
 \end{document}
